--- a/subjects.html
+++ b/subjects.html
@@ -79,7 +79,7 @@
         <div class="resource-box" id="resource-1">
             <img src="images/textbook.jpg" alt="Resource 1">
             <h3>Classic Textbooks</h3>
-            <p>Classic code textbooks provide a foundatinal understanding of coding principles 
+            <p>Classic code textbooks provide a foundational understanding of coding principles 
                 and the different programming languages used. Reading and practicing 
                 the problem questions can help deepen understanding</p>
         </div>
